--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19236,5 +19236,23 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Yes... %day% days</target>
       </segment>
     </unit>
+    <unit id="BVQgW5g" name="Diskussionen rund um die Verbesserung des Tages">
+      <notes>
+        <note category="german">Diskussionen rund um die Verbesserung des Tages</note>
+      </notes>
+      <segment>
+        <source>Diskussionen rund um die Verbesserung des Tages</source>
+        <target>Discussions about the daily upgrade project</target>
+      </segment>
+    </unit>
+    <unit id="DDRQlGW" name="Verfügbare Verbesserungen des Tages">
+      <notes>
+        <note category="german">Verfügbare Verbesserungen des Tages</note>
+      </notes>
+      <segment>
+        <source>Verfügbare Verbesserungen des Tages</source>
+        <target>Available upgrade projects</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
