--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19265,5 +19265,23 @@
         <target>Et oui... %day% jours</target>
       </segment>
     </unit>
+    <unit id="BVQgW5g" name="Diskussionen rund um die Verbesserung des Tages">
+      <notes>
+        <note category="german">Diskussionen rund um die Verbesserung des Tages</note>
+      </notes>
+      <segment>
+        <source>Diskussionen rund um die Verbesserung des Tages</source>
+        <target>Discussions autour de l'évolution du jour</target>
+      </segment>
+    </unit>
+    <unit id="DDRQlGW" name="Verfügbare Verbesserungen des Tages">
+      <notes>
+        <note category="german">Verfügbare Verbesserungen des Tages</note>
+      </notes>
+      <segment>
+        <source>Verfügbare Verbesserungen des Tages</source>
+        <target>Évolutions du jour disponibles</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
