--- a/translations/admin.de.xlf
+++ b/translations/admin.de.xlf
@@ -3205,5 +3205,32 @@
         <target>Gesponsorte Spieler</target>
       </segment>
     </unit>
+    <unit id="m56Z2c0" name="Zombie-Spread ausführen">
+      <notes>
+        <note category="german">Zombie-Spread ausführen</note>
+      </notes>
+      <segment>
+        <source>Zombie-Spread ausführen</source>
+        <target>Zombie-Spread ausführen</target>
+      </segment>
+    </unit>
+    <unit id="EPOEUwe">
+      <notes>
+        <note category="german">Format: "{x0}/{y0}:{x1}/{y1},{zombies}" (Bereich) oder "{x}/{y},{zombies}" (einzelne Zone), zum Beispiel "-1/3:-4/2,5". Statt der Positionsangabe kann "all" verwendet werden. Statt einem numerischen Wert für die Zahl der Zombies ist folgendes ebenfalls gültig: "today" (Anzahl der Zombies beim letzten Tageswechsel), "initial" (Anzahl der Zombies an Tag 1).</note>
+      </notes>
+      <segment>
+        <source>Format: "{x0}/{y0}:{x1}/{y1},{zombies}" (Bereich) oder "{x}/{y},{zombies}" (einzelne Zone), zum Beispiel "-1/3:-4/2,5". Statt der Positionsangabe kann "all" verwendet werden. Statt einem numerischen Wert für die Zahl der Zombies ist folgendes ebenfalls gültig: "today" (Anzahl der Zombies beim letzten Tageswechsel), "initial" (Anzahl der Zombies an Tag 1).</source>
+        <target>Format: "{x0}/{y0}:{x1}/{y1},{zombies}" (Bereich) oder "{x}/{y},{zombies}" (einzelne Zone), zum Beispiel "-1/3:-4/2,5". Statt der Positionsangabe kann "all" verwendet werden. Statt einem numerischen Wert für die Zahl der Zombies ist folgendes ebenfalls gültig: "today" (Anzahl der Zombies beim letzten Tageswechsel), "initial" (Anzahl der Zombies an Tag 1).</target>
+      </segment>
+    </unit>
+    <unit id="_kkbddG" name="Zombies setzen">
+      <notes>
+        <note category="german">Zombies setzen</note>
+      </notes>
+      <segment>
+        <source>Zombies setzen</source>
+        <target>Zombies setzen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
