--- a/translations/names.fr.xlf
+++ b/translations/names.fr.xlf
@@ -1501,7 +1501,7 @@
       </notes>
       <segment>
         <source>Quarantäne-Zone</source>
-        <target>Etude des quarantaines</target>
+        <target>Étude des quarantaines</target>
       </segment>
     </unit>
   </file>
