--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19248,5 +19248,14 @@
         <target>Mejoras del día disponibles</target>
       </segment>
     </unit>
+    <unit id="sG6LFYJ" name="Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...">
+      <notes>
+        <note category="german">Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</note>
+      </notes>
+      <segment>
+        <source>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</source>
+        <target>Die Bank enthält zur Zeit keine Gegenstände, die bearbeitet werden können...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
