--- a/translations/login.es.xlf
+++ b/translations/login.es.xlf
@@ -667,5 +667,14 @@
         <target>Wenn du von einem anderen Spieler für MyHordes geworben wurdest, gib hier seinen Namen ein. Er oder sie wird dir sehr dankbar sein...</target>
       </segment>
     </unit>
+    <unit id="zPzPmd5">
+      <notes>
+        <note category="german">Dein E-Mail Anbieter stellt Nachrichten von MyHordes nicht oder nur sehr unzuverlässig zu. Wir empfehlen, wenn möglich eine andere E-Mail Adresse für die Registrierung zu verwenden. Bitte entschuldige die Unannehmlichkeiten.</note>
+      </notes>
+      <segment>
+        <source>Dein E-Mail Anbieter stellt Nachrichten von MyHordes nicht oder nur sehr unzuverlässig zu. Wir empfehlen, wenn möglich eine andere E-Mail Adresse für die Registrierung zu verwenden. Bitte entschuldige die Unannehmlichkeiten.</source>
+        <target>Tu proveedor de correo electrónico no entrega los mensajes de MyHordes o los entrega de forma muy poco fiable. Recomendamos utilizar una dirección de correo electrónico diferente para el registro, si es posible. Por favor, disculpen las molestias.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
