--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -15217,7 +15217,7 @@
       </notes>
       <segment>
         <source>Die Stadt ist zerstört! Flieht, irh Narren!</source>
-        <target>Die Stadt ist zerstört! Flieht, irh Narren!</target>
+        <target>Die Stadt ist zerstört! Flieht, ihr Narren!</target>
       </segment>
     </unit>
     <unit id="G93YC9H">
