--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -7907,7 +7907,7 @@
       </notes>
       <segment>
         <source>Auch du musst diese Stadt heute Nacht verteidigen! Tritt in die Wächtergruppe ein! Du möchtest Mitglied der selbstmörd... tapfersten Bürger werden? Was zögerst du noch:</source>
-        <target><![CDATA[Vous aussi, défendez la ville ce soir ! Rejoignez <strong>l'équipe des Veilleurs !<br /><br />Vous souhaitez faire partie des <strong>citoyens</strong> les plus suicid... <strong>courageux</strong> ? Alors n'hésitez pas un seul instant :]]></target>
+        <target><![CDATA[Vous aussi, défendez la ville ce soir ! Rejoignez <strong>l'équipe des Veilleurs</strong> !<br /><br />Vous souhaitez faire partie des <strong>citoyens</strong> les plus suicid... <strong>courageux</strong> ? Alors n'hésitez pas un seul instant :]]></target>
       </segment>
     </unit>
     <unit id="UPuSUuC" name="Ich möchte Wächter werden!">
